--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,8 @@
   "action": {
     "default_popup": "index.html",
     "default_icon": "assets/righttodinner.png"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
 }
