--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,17 @@
     "default_icon": "assets/righttodinner.png",
     "default_title": "Click to clean"
   },
-  "background": {
-    "service_worker": "background.js"
-  },
+  // "background": {
+  //   "service_worker": "background.js"
+  // },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://*/*"
+      ]
+    }
+  ],
   "permissions": ["activeTab", "scripting"],
   "commands": {
     "_execute_action": {
